--- a/src/style.css
+++ b/src/style.css
@@ -80,3 +80,11 @@ html, body {
   height: 20px;
   position: relative;
 }
+
+.calendar .main .view-week {
+  display: none;
+}
+
+.calendar .main .view-month {
+  display: none;
+}
